--- a/googleBooks/googleBooks.html
+++ b/googleBooks/googleBooks.html
@@ -1,5 +1,5 @@
 <!------------------------------------------------------------------------ ->
-< @stylesheet    - googleBooks.html                                         >
+< @webpage       - googleBooks.html                                         >
 < @date          - 04-AUG-2024                                              >
 < @author        - David B. Mitchell                                        >
 < @description   - Markup for googleBooks.html web page.                    >
