--- a/googleBooks/googleBooks.html
+++ b/googleBooks/googleBooks.html
@@ -4,6 +4,9 @@
 < @author        - David B. Mitchell                                        >
 < @description   - Markup for googleBooks.html web page.                    >
 < -------------------------------------------------------------------------->
+<!DOCTYPE html>
+<html>
+<body>
 <h1 id="header">google books</h1>
 <a>
   <img width="200" height="200" alt="_Image not found.">
@@ -13,3 +16,5 @@
   <input name="inp1" type="search" placeholder="Enter your search criteria here..." onkeyup="keyUp(event)"></input></br>
   <textarea cols="94" rows="17"></textarea>
 </div>
+</body>
+</html>
