--- a/googleBooks/googleBooks.html
+++ b/googleBooks/googleBooks.html
@@ -8,9 +8,7 @@
 <html>
 <body>
 <h1 id="header">google books</h1>
-<a>
-  <img width="200" height="200" alt="_Image not found.">
-</a>
+<a><img width="200" height="200" alt="_Image not found."></a>
 <div class="div1">
   <label for="inp1">Search:</label>
   <input name="inp1" type="search" placeholder="Enter your search criteria here..." onkeyup="keyUp(event)"></input></br>
