--- a/googleBooks2/index.html
+++ b/googleBooks2/index.html
@@ -11,12 +11,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>google books</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="./style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body onload="init()">
-  <h1 id="header">google books</h1>
-  <a><img width="100" height="100" alt="_Image not found."></a></br>
+  <h1>google books</h1>
+  <a><img width="100" height="100" alt="_image not found."></a></br>
   <label for="input1">Search:</label>
   <input name="input1" size="50rem" onkeyup="keyup(event)"></input>
   <p></p>
