--- a/googleBooks2/index.html
+++ b/googleBooks2/index.html
@@ -21,7 +21,7 @@
   <input name="input1" size="50rem" onkeyup="keyup(event)"></input>
   <p></p>
   <textarea rows=40 cols=140 disabled></textarea>
-  <script src="script.js" type="text/javascript"></script>
+  <script src="./script.js" type="text/javascript"></script>
 </body>
 
 </html>
